# qr-code-module

./: CMakeLists.txt  README.md
include/qrmodule/: base64.h  image_view.h  qr_decoder.h  qr_encoder.h
src/: qr_decoder.cpp  qr_encoder.cpp
